@@ -1,3 +1,10 @@
+2002-01-29  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 02921] use inttypes.h instead of stdint.h
+	* configure: check inttypes.h instead of stdint.h
+	* config.h.dist: s/STDINT_H/INTTYPES_H/
+	* mktable.c: use inttypes.h instead of stdint.h
+
 2002-01-28  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 02919] no need of width
@@ -2332,4 +2339,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.268 2002/01/28 14:44:56 ukai Exp $
+$Id: ChangeLog,v 1.269 2002/01/29 03:23:43 ukai Exp $
